# autodocodec-dhall

./: .gitattributes  .gitignore  README.md  cabal.project  flake.nix  garnix.yaml
.cache/vale/config/vocabularies/autodocodec-dhall/: accept.txt
.config/: mustache.yaml
.config/project/: default.nix
.github/: settings.yml
.github/workflows/: build.yml
core/: .vale.ini  CHANGELOG.md  README.md  autodocodec-dhall.cabal
core/.github/: settings.yml
core/.github/workflows/: build.yml
core/docs/: license-report.md
core/src/Autodocodec/: Dhall.hs
core/src/Autodocodec/Dhall/: Decode.hs  Encode.hs  File.hs
core/tests/Spec/: DecodeSpec.hs  EncodeSpec.hs  Types.hs
